syntax = "proto3";
package refresh_token;

option go_package = "nfxid/protos/gen/auth/refresh_token;refreshtokenpb";

import "google/protobuf/timestamp.proto";

// 刷新令牌撤销原因枚举
enum AuthRevokeReason {
  AUTH_REVOKE_REASON_UNSPECIFIED = 0;
  AUTH_REVOKE_REASON_USER_LOGOUT = 1;          // 用户登出
  AUTH_REVOKE_REASON_ADMIN_REVOKE = 2;         // 管理员撤销
  AUTH_REVOKE_REASON_PASSWORD_CHANGED = 3;     // 密码已更改
  AUTH_REVOKE_REASON_ROTATION = 4;             // 轮换
  AUTH_REVOKE_REASON_ACCOUNT_LOCKED = 5;       // 账户已锁定
  AUTH_REVOKE_REASON_DEVICE_CHANGED = 6;       // 设备已更改
  AUTH_REVOKE_REASON_SUSPICIOUS_ACTIVITY = 7;  // 可疑活动
  AUTH_REVOKE_REASON_OTHER = 8;                // 其他
}

// 刷新令牌信息
// Note: No tenant_id because refresh tokens are user-level, not tenant-level (user can belong to multiple tenants)
message RefreshToken {
  string id = 1;                          // 令牌ID (UUID)
  string token_id = 2;                    // 令牌标识符 (varchar(255))
  string user_id = 3;                     // 用户ID (UUID)
  optional string app_id = 4;             // 应用ID (UUID)
  optional string client_id = 5;          // 客户端ID (varchar(255))
  optional string session_id = 6;         // 会话ID (UUID)
  google.protobuf.Timestamp issued_at = 7;     // 签发时间
  google.protobuf.Timestamp expires_at = 8;    // 过期时间
  optional google.protobuf.Timestamp revoked_at = 9; // 撤销时间
  optional AuthRevokeReason revoke_reason = 10;       // 撤销原因
  optional string rotated_from = 11;      // 轮换自的令牌ID (UUID)
  optional string device_id = 12;         // 设备ID (varchar(255))
  optional string ip = 13;                // IP地址 (inet)
  optional string ua_hash = 14;           // User-Agent 哈希 (varchar(64))
  google.protobuf.Timestamp created_at = 15;          // 创建时间
  google.protobuf.Timestamp updated_at = 16;          // 更新时间
}

// RefreshToken 服务 - 供其他服务通过 gRPC 管理刷新令牌
service RefreshTokenService {
  // 根据ID获取刷新令牌
  rpc GetRefreshTokenByID (GetRefreshTokenByIDRequest) returns (GetRefreshTokenByIDResponse);
  
  // 根据令牌ID获取刷新令牌
  rpc GetRefreshTokenByTokenID (GetRefreshTokenByTokenIDRequest) returns (GetRefreshTokenByTokenIDResponse);
  
  // 根据用户ID获取刷新令牌列表
  rpc GetRefreshTokensByUserID (GetRefreshTokensByUserIDRequest) returns (GetRefreshTokensByUserIDResponse);
}

// RefreshToken Service Messages
message GetRefreshTokenByIDRequest {
  string id = 1;
}

message GetRefreshTokenByIDResponse {
  RefreshToken refresh_token = 1;
}

message GetRefreshTokenByTokenIDRequest {
  string token_id = 1;
}

message GetRefreshTokenByTokenIDResponse {
  RefreshToken refresh_token = 1;
}

message GetRefreshTokensByUserIDRequest {
  string user_id = 1;
}

message GetRefreshTokensByUserIDResponse {
  repeated RefreshToken refresh_tokens = 1;
}
